[package]
name = "cyclotron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.152"
rand = "0.8.5"
goblin = "0.5"
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2"
env_logger = "0.11.5"
clap = { version = "4.5.28", features = ["derive"] }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
phf = { version = "0.13.1", features = ["macros"] }

[lib]
name = "cyclotron"
crate-type = ["rlib", "cdylib"]
