[package]
name = "cyclotron"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
goblin = "0.5"
rusqlite = { version = "0.38.0", features = ["bundled"] }
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2"
env_logger = "0.11.5"
clap = { version = "4.5.28", features = ["derive"] }
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.19"
phf = { version = "0.13.1", features = ["macros"] }
anyhow = "1.0.100"

[lib]
name = "cyclotron"
crate-type = ["rlib", "cdylib"]
